TEST_PROGRAMS/VALID_TYPECHECK/add_runes.go
package main;

func main() {
    
    //this operation is allowed
    var c = 'g';
    var x = 'g'+c;
    print(x);
}
