TEST_PROGRAMS/INVALID/04/7.go
package main

func main() {
    //Invalid escape
    var x = '\x'
    x++ // "use" x
}
